<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/generate_teams_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:onClick="generateTeams"
        android:text="@string/gen_random_teams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/teams_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/to_be_changed"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/selected_players_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/selected_players_id"
        android:layout_width="96dp"
        android:layout_height="234dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/generate_teams_button_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/player1_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/player2_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player2" />

        <CheckBox
            android:id="@+id/player3_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player3" />

        <CheckBox
            android:id="@+id/player4_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player4" />

        <CheckBox
            android:id="@+id/player5_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/player6_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player6" />

        <CheckBox
            android:id="@+id/player7_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <Button
        android:id="@+id/move_to_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveToHp"
        android:text="@string/move_to_hp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>